--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<!-- Navigation Bar -->
 			<div class="col-lg-12 sticky-top bg-white">
 				<nav class="navbar navbar-expand-lg navbar-light bg-white">
-				  <a class="navbar-brand" href="#"><img id="navi" src="img/Logo.jpeg" alt="Logo"></a>
+				  <a class="navbar-brand" href="#"><img id="navi" src="img/Trademark.jpeg" alt="Logo"></a>
 				  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				    <span class="navbar-toggler-icon"></span>
 				  </button>
@@ -34,10 +34,10 @@
 				        <a class="nav-link" href="#about"><b>About</b></a>
 				      </li>
 				      <li class="nav-item">
-				        <a class="nav-link" href="#skills"><b>Project</b></a>
+				        <a class="nav-link" href="#skills"><b>Skills</b></a>
 				      </li>
 				      <li class="nav-item">
-				        <a class="nav-link" href="#projects"><b>Skills</b></a>
+				        <a class="nav-link" href="#projects"><b>Project</b></a>
 				      </li>
 				      <li class="nav-item">
 				        <a class="nav-link" href="#contact"><b>Contact</b></a>
@@ -53,9 +53,9 @@
 			  		<img id="about_image" src="img/pp.jpg">
 			  	</div>
 			  	<br>
-				<h1><b>Your Name</b></h1>
-				<h3><b>Your Role</b></h3>
-				<p>Write a phrase that will describe you as a web professional.</p>
+				<h1><b>Brian Lloyd Garde</b></h1>
+				<h3><b>Front-End Developer</b></h3>
+				<p>An aspiring Front-end Developer building up skills and experience through determination and hardwork.</p>
 			  	<a class="btn btn-danger btn-lg" href="#skills" role="button">Learn more</a>
 			</div>
 
@@ -69,16 +69,36 @@
 					<div class="col-lg-1"></div>
 					<div class="col-lg-5">
 						<!-- C/C++ HTML5 JAVA CSS Javascript PHP Python SQL WebDesign-->
-						<label><b>Skill 1</b></label>
+						<label><b>HTML</b></label>
 						<div class="progress">
-						  <div class="progress-bar" style="width: 50%;"><b>Percentage</b></div>
+						  <div class="progress-bar bg-success" style="width: 80%;"><b>80%</b></div>
+						</div>
+						<br>
+						<label><b>JavaScript</b></label>
+						<div class="progress">
+						  <div class="progress-bar bg-warning" style="width: 50%;"><b>50%</b></div>
+						</div>
+						<br>
+						<label><b>Git</b></label>
+						<div class="progress">
+						  <div class="progress-bar" style="width: 65%;"><b>65%</b></div>
 						</div>
 						<br>
 					</div>
 					<div class="col-lg-5">
-						<label><b>Skill 2</b></label>
+						<label><b>CSS</b></label>
 						<div class="progress">
-						  <div class="progress-bar bg-danger" style="width: 50%;"><b>Percentage</b></div>
+						  <div class="progress-bar bg-success" style="width: 75%;"><b>75%</b></div>
+						</div>
+						<br>
+						<label><b>Bootstrap</b></label>
+						<div class="progress">
+						  <div class="progress-bar" style="width: 65%;"><b>65%</b></div>
+						</div>
+						<br>
+						<label><b>GUI</b></label>
+						<div class="progress">
+						  <div class="progress-bar bg-success" style="width: 70%;"><b>70%</b></div>
 						</div>
 						<br>
 					</div>
@@ -95,10 +115,10 @@
 					</div>
 					<div id="projects_body" class="col-lg-12">
 						<div class="card" style="width: 70%;">
-						  <img src="img/sample_project.png" class="card-img-top">
+						  <img src="img/project.png" class="card-img-top">
 						  <div class="card-body text-center">
-						    <h5 class="card-title">Project Title</h5>
-						    <p class="card-text">Project Description</p>
+						    <h5 class="card-title">Responsive web design with a simple GUI</h5>
+						    <p class="card-text">This project was created by me last year. In this picture you can see icons which can be hover for a simple animation as well as a sign up feature for users interested to join in my future endeavors as a front-end developer.</p>
 						  </div>
 						</div>
 					</div>
@@ -114,22 +134,22 @@
 					</div>
 					<div class="col-lg-4">
 						<label>Mobile Number</label>
-						<h4>Your Mobile Number</h4>
+						<h4>09624860259</h4>
 					</div>
 					<div class="col-lg-4">
 						<label>Email Address</label>
-						<h4>Your Email Address</h4>
+						<h4>brianlloyd.garde@gsc.edu.ph</h4>
 					</div>
 					<div class="col-lg-4">
 						<label>Location</label>
-						<h4>Your Location</h4>
+						<h4>San Miguel, Jordan, Guimaras</h4>
 					</div>
 				</div>
 			</div>
 
 			<!-- Footer -->
 			<div id="footer" class="col-lg-12">
-				<label><b>Your Site Footer</b></label>
+				<label><b>Yanz© Copyright Claim All rights reserved 2022</b></label>
 			</div>
 
 		</div>
