--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -22,8 +22,8 @@
 		<div class="row">
 			
 			<!-- Navigation Bar -->
-			<div class="col-lg-12 sticky-top bg-white">
-				<nav class="navbar navbar-expand-lg navbar-light bg-white">
+			<div class="col-lg-12 sticky-top opacity-50">
+				<nav class="navbar navbar-expand-lg navbar-light opacity-75">
 				  <a class="navbar-brand" href="#"><img id="navi" src="img/Trademark.jpeg" alt="Logo"></a>
 				  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				    <span class="navbar-toggler-icon"></span>
@@ -56,11 +56,11 @@
 				<h1><b>Brian Lloyd Garde</b></h1>
 				<h3><b>Front-End Developer</b></h3>
 				<p>An aspiring Front-end Developer building up skills and experience through determination and hardwork.</p>
-			  	<a class="btn btn-danger btn-lg" href="#skills" role="button">Learn more</a>
+			  	<a class="btn btn-primary btn-lg" href="#skills" role="button">Learn more</a>
 			</div>
 
 			<!-- Skills -->
-			<div id="skills" class="jumbotron col-lg-12 bg-white">
+			<div id="skills" class="jumbotron col-lg-12 bg-gray">
 				<div class="row">
 					<div class="col-lg-12 text-center">
 						<h3><b>SKILLS</b></h3>
@@ -107,18 +107,18 @@
 			</div>
 
 			<!-- Projects -->
-			<div id="projects" class="jumbotron col-lg-12 bg-danger">	
+			<div id="projects" class="jumbotron col-lg-12 bg-gray">	
 				<div class="row">
 					<div class="col-lg-12 text-center">
-						<h3 id="project_title"><b>PROJECTS</b></h3>
+						<h3 id="project_title"><b>PROJECT/S</b></h3>
 						<br>
 					</div>
 					<div id="projects_body" class="col-lg-12">
 						<div class="card" style="width: 70%;">
 						  <img src="img/project.png" class="card-img-top">
-						  <div class="card-body text-center">
-						    <h5 class="card-title">Responsive web design with a simple GUI</h5>
-						    <p class="card-text">This project was created by me last year. In this picture you can see icons which can be hover for a simple animation as well as a sign up feature for users interested to join in my future endeavors as a front-end developer.</p>
+						  <div class="card-body text-center bg-info">
+						    <h5 class="card-title ">Responsive web design with a simple GUI</h5>
+						    <p class="card-text ">This project was created by me last year. In this picture you can see icons which can be hover for a simple animation as well as a sign up feature for users interested to join in my future endeavors as a front-end developer.</p>
 						  </div>
 						</div>
 					</div>
@@ -126,7 +126,7 @@
 			</div>
 
 			<!-- Contact -->
-			<div id="contact" class="jumbotron col-lg-12 bg-white">
+			<div id="contact" class="jumbotron col-lg-12 bg-gray">
 				<div class="row">
 					<div class="col-lg-12 text-center">
 						<h3><b>CONTACT</b></h3>
