--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			</div>
 
 			<!-- Skills -->
-			<div id="skills" class="jumbotron col-lg-12 bg-gray">
+			<div id="skills" class="jumbotron col-lg-12">
 				<div class="row">
 					<div class="col-lg-12 text-center">
 						<h3><b>SKILLS</b></h3>
