--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			</div>
 
 			<!-- Skills -->
-			<div id="skills" class="jumbotron col-lg-12">
+			<div id="skills" class="jumbotron col-lg-12 bg-white">
 				<div class="row">
 					<div class="col-lg-12 text-center">
 						<h3><b>SKILLS</b></h3>
@@ -68,7 +68,6 @@
 					</div>
 					<div class="col-lg-1"></div>
 					<div class="col-lg-5">
-						<!-- C/C++ HTML5 JAVA CSS Javascript PHP Python SQL WebDesign-->
 						<label><b>HTML</b></label>
 						<div class="progress">
 						  <div class="progress-bar bg-success" style="width: 80%;"><b>80%</b></div>
