--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title> Your Site Title </title>
+	<title> WST | Portfolio </title>
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
@@ -148,7 +148,7 @@
 
 			<!-- Footer -->
 			<div id="footer" class="col-lg-12">
-				<label><b>Yanz© Copyright Claim All rights reserved 2022</b></label>
+				<label><b>Yanz© Copyright Claim. All rights reserved 2022</b></label>
 			</div>
 
 		</div>
